--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tryit",
+  "name": "@cceevv/tryit",
   "version": "1.0.0",
   "description": "Async/await wrapper for easy error handling in js",
   "keywords": [
